// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address renders all 1`] = `
<span>
  <InlineUL
    separator=", "
    wrapperClassName="di"
  >
    <span>
      CERN
    </span>
    <span>
      Meyrin
    </span>
    <span>
      Geneva
    </span>
    <span>
      Switzerland
    </span>
  </InlineUL>
</span>
`;

exports[`Address renders empty 1`] = `
<span>
  <InlineUL
    separator=", "
    wrapperClassName="di"
  />
</span>
`;

exports[`Address renders with city and country 1`] = `
<span>
  <InlineUL
    separator=", "
    wrapperClassName="di"
  >
    <span>
      Geneva
    </span>
    <span>
      Switzerland
    </span>
  </InlineUL>
</span>
`;

exports[`Address renders with only city 1`] = `
<span>
  <InlineUL
    separator=", "
    wrapperClassName="di"
  >
    <span>
      Geneva
    </span>
  </InlineUL>
</span>
`;

exports[`Address renders with only country 1`] = `
<span>
  <InlineUL
    separator=", "
    wrapperClassName="di"
  >
    <span>
      Switzerland
    </span>
  </InlineUL>
</span>
`;

exports[`Address renders with only place name 1`] = `
<span>
  <InlineUL
    separator=", "
    wrapperClassName="di"
  >
    <span>
      CERN
    </span>
  </InlineUL>
</span>
`;
